fix not showing image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ html *::-webkit-scrollbar-track {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('./assets/img/slider/slider1.jpg') top center / cover no-repeat;
 }
 
 #slider .text-content {
